--- a/clusters/localhost/gitops/kustomization.yaml
+++ b/clusters/localhost/gitops/kustomization.yaml
@@ -7,7 +7,12 @@ commonLabels:
 namespace: wac-hospital
 
 resources:
- - prepare.kustomization.yaml
- - cd.kustomization.yaml
- - install.kustomization.yaml
- - git-repository.yaml
+- prepare.kustomization.yaml
+- cd.kustomization.yaml
+- install.kustomization.yaml
+- git-repository.yaml
+- fpjp-ambulance-ufe.image-repository.yaml
+- fpjp-ambulance-ufe.image-policy.yaml
+- ufe-controller.image-repository.yaml
+- ufe-controller.image-policy.yaml
+- image-update-automation.yaml
