--- a/clusters/localhost/gitops/kustomization.yaml
+++ b/clusters/localhost/gitops/kustomization.yaml
@@ -13,6 +13,8 @@ resources:
 - git-repository.yaml
 - fpjp-ambulance-ufe.image-repository.yaml
 - fpjp-ambulance-ufe.image-policy.yaml
+- fpjp-ambulance-webapi.image-repository.yaml
+- fpjp-ambulance-webapi.image-policy.yaml
 - ufe-controller.image-repository.yaml
 - ufe-controller.image-policy.yaml
 - image-update-automation.yaml
