--- a/apps/fpjp-ambulance-ufe/webcomponent.yaml
+++ b/apps/fpjp-ambulance-ufe/webcomponent.yaml
@@ -11,7 +11,7 @@ spec:
                                     # pri navigácii na zoznam čakajúcich
       attributes: 
       - name: api-base
-        value: http://localhost:30081/api
+        value: /fpjp-api
       path: fpjp-department      # cesta, ktora sa zobrazi v address bare v prehliadaci, ked bude tento mikroFE aktívny
       title: Evidencia vybavenia nemocnice - fpjp     # názov mikro aplikácie
       details: Evidencia vybavenia nemocnice a ambulancií, s prehľadom umiestnenia a životnosti jednotlivých položiek
